[tool.poetry]
name = "hotel-reservations"
version = "0.1.0"
description = "hotel_reservations"
authors = ["Your Name <you@example.com>"]
license = "n"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.7"
djangorestframework = "^3.16.1"
drf-yasg = "^1.21.11"
psycopg2-binary = "^2.9.11"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.3"
pytest = "^8.4.2"
docker = "^7.1.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"